@@ -72,6 +72,7 @@
 	- add rpmlib(HeaderLoadSortsTags) for tracking header regions
 		"just in case".
 	- create _tmppath on the fly if not present.
+	- remove /etc/rpm/macros.db1 configuration file if db3 rebuilt.
 
 3.0.6 -> 4.0
 	- use DIRNAMES/BASENAMES/DIRINDICES not FILENAMES in packages and db.
